<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="20dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_centerVertical="true"
                android:onClick="back" android:text="@string/arrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:text="@string/modifyPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_centerHorizontal="true"
                android:text="@string/save"
                android:textColor="#F00"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

    <EditText
            android:hint="@string/sourcePassword"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ImageView
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    <EditText
            android:hint="@string/newPassword"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ImageView
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    <EditText
            android:hint="@string/confirmPassword"
            android:padding="10dp"
            android:textSize="20sp"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ImageView
            android:background="#000000"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    <Button
            android:text="@string/finish"
            android:background="#FF0000"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>