<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="20dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_centerVertical="true"
                                    android:onClick="back"                     android:text="@string/arrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:text="@string/setting_bind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

    <TextView
            android:text="182****888888"
            android:layout_gravity="center"
            android:padding="30dp"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:onClick="modifyPassword"
            android:text="@string/modifyPassword"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ImageView
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    <TextView
            android:text="@string/changePhone"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ImageView
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    <TextView
            android:text="@string/bindWeChat"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <ImageView
            android:background="#000000"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    <Button
            android:text="@string/finish"
            android:background="#FF0000"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</LinearLayout>