<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="20dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:layout_centerVertical="true"
                android:onClick="back" android:text="@string/arrowBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:text="@string/editData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

    <!--头像设置开始-->
    <ImageView
            android:src="@drawable/ic_launcher"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
    <!--头像设置完毕-->
    <!--资料设置开始-->
    <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ffffff"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:padding="10dp"
                android:text="@string/nickName"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_weight="3"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ffffff"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:padding="10dp"
                android:text="@string/sex"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_weight="3"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ffffff"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:padding="10dp"
                android:text="@string/birthYear"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_weight="3"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ffffff"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:padding="10dp"
                android:text="@string/education"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_weight="3"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ffffff"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:padding="10dp"
                android:text="@string/major"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_weight="3"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#ffffff"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:padding="10dp"
                android:text="@string/job"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_weight="2"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_weight="3"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <!--资料设置完毕-->
</LinearLayout>