<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:fadingEdge="vertical">

    <LinearLayout
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_centerVertical="true"
                    android:onClick="back" android:text="@string/arrowBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_centerHorizontal="true"
                    android:textSize="20sp"
                    android:text="@string/studyRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.zte.esapp.widget.CircleImageView
                    android:src="@drawable/head"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>

        </RelativeLayout>

        <TextView
                android:text="用户昵称"
                android:layout_gravity="center"
                android:textSize="26sp"
                android:padding="10dp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <!--学习信息开始-->
        <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="27小时22分钟"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:text="@string/studyTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="30本"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:text="@string/studyBook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="25天"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:text="@string/studyDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
        <!--学习信息完毕-->

        <TextView
                android:text="@string/everyDayStudyTime"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/form"/>
        <TextView
                android:text="@string/studyRecord"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ListView
                android:id="@+id/lv_study_record"
                android:layout_width="wrap_content"
                android:layout_height="200dp">

        </ListView>

    </LinearLayout>

</ScrollView>