<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#333333"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:text="用户名："
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/et_username"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#333333"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:text="密码："
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <EditText android:id="@+id/et_password"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#333333"/>

    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:onClick="register"
            android:text="@string/register"
            android:layout_alignParentLeft="true"
            android:textColor="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/forget"
            android:layout_alignParentRight="true"
            android:textColor="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <Button
        android:id="@+id/button"
        style="@style/MyOrangeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="登录" />

</LinearLayout>